# SLAM-Robot2

./: package.xml  setup.cfg  setup.py
config/: controllers.yaml  ekf.yaml  slam_toolbox.yaml
launch/: bringup.launch.py
robot_mino_control/: lidar_node.py  serial_bridge_node.py  test_trim.py
urdf/: robot_mino.urdf.xacro
